# PantheonChain

./: .clang-format  .dockerignore  .gitignore  .gitmodules  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_REPORT.md  AUDIT_UPDATE_2026-01-13.md  CHANGELOG.md  CLIENT_STATUS.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  COMPREHENSIVE_AUDIT_SUMMARY.md  CONTRIBUTING.md  DATABASE_STORAGE_COMPLETE.md  DOWNLOAD.md  Dockerfile  EULA.md  EXTERNAL_DEPENDENCIES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAP_AUDIT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  P2P_NETWORKING_COMPLETE.md  P3_IMPLEMENTATION_SUMMARY.md  PHASE3_ENHANCEMENTS.md  PHASE4_ADVANCED_OPTIMIZATIONS.md  QUICK_START.md  README.md  RELEASING.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_SUMMARY.md  SVG_COMPLIANCE_REPORT.md  TODOS_AND_UNIMPLEMENTED.md  TODOS_QUICK_REFERENCE.md  TODO_COMPLETION_SUMMARY.md  TODO_SUMMARY.md  TROUBLESHOOTING.md  (+12 more)
clients/cli/: CMakeLists.txt  README.md  main.cpp
clients/core-daemon/: CMakeLists.txt  README.md  main.cpp  parthenond.conf
clients/desktop/: CMakeLists.txt  README.md
clients/desktop/assets/: README.md  icon.icns  resources.qrc
clients/desktop/gui/: main.cpp
clients/desktop/screenshots/: README.md
clients/desktop/src/: governancepage.cpp  governancepage.h  main.cpp  mainwindow.cpp  mainwindow.h  miningpage.cpp  miningpage.h  overviewpage.cpp  overviewpage.h  receivepage.cpp  receivepage.h  rpc_client.cpp  rpc_client.h  sendpage.cpp  sendpage.h  settingspage.cpp  settingspage.h  stakingpage.cpp  stakingpage.h  transactionpage.cpp  transactionpage.h
layer1-talanton/core/: CMakeLists.txt
layer1-talanton/core/chainstate/: chain.cpp  chain.h  chainstate.cpp  chainstate.h  utxo.cpp
layer1-talanton/core/consensus/: difficulty.cpp  genesis.h  issuance.cpp  issuance.h
layer1-talanton/core/crypto/: README.md  hardware_crypto.cpp  schnorr.cpp  sha256.cpp  sha256.h
layer1-talanton/core/mempool/: mempool.cpp  mempool.h
layer1-talanton/core/mining/: CMakeLists.txt  cuda_verifier.cpp  miner.cpp  miner.h
layer1-talanton/core/node/: CMakeLists.txt  node.cpp
layer1-talanton/core/p2p/: CMakeLists.txt  certificate_rotation.cpp  certificate_rotation.h  message.cpp  network_manager.cpp  network_manager.h  peer_database.cpp  peer_discovery.cpp  peer_discovery.h  protocol.cpp  protocol.h  tls_connection.h  zero_copy_network.cpp  zero_copy_network.h
layer1-talanton/core/primitives/: amount.h  asset.h  block.cpp  safe_math.h  transaction.cpp  transaction.h
layer1-talanton/core/privacy/: ring_signature.cpp  ring_signature.h  zk_snark.cpp  zk_stark.cpp  zk_stark.h
layer1-talanton/core/sharding/: shard.cpp  shard.h
layer1-talanton/core/storage/: CMakeLists.txt  block_storage.cpp  block_storage.h  utxo_storage.h
layer1-talanton/governance/: CMakeLists.txt  antiwhale.cpp  antiwhale.h  balance_voting.cpp  balance_voting.h  boule.cpp  boule.h  emergency.cpp  emergency.h  eventlog.cpp  eventlog.h  fee_router.cpp  fee_router.h  ostracism.cpp  ostracism.h  params.cpp  params.h  snapshot.cpp  snapshot.h  staking.cpp  staking.h  supply_policy.cpp  supply_policy.h  treasury.cpp  treasury.h  vesting.cpp  vesting.h  voting.cpp  voting.h
layer1-talanton/rpc/: CMakeLists.txt  rpc_server.cpp  rpc_server.h  validation.h
layer1-talanton/settlement/: CMakeLists.txt  destination_tag.cpp  escrow.cpp  escrow.h  multisig.cpp  multisig.h
layer1-talanton/wallet/: CMakeLists.txt  wallet.cpp  wallet.h
layer1/core/: CMakeLists.txt
layer1/evm/: CMakeLists.txt  gas_pricing.h  mpt.cpp  mpt.h  opcodes.cpp  opcodes.h  private_contracts.cpp  private_contracts.h  state.cpp  state.h  vm.cpp  vm.h
layer1/rpc/: CMakeLists.txt  rate_limiter.h  rpc_server.cpp  rpc_server.h  rpc_server_old.cpp  validation.h
layer1/wallet/: CMakeLists.txt  wallet.cpp  wallet.h
layer2/: CMakeLists.txt  README.md
layer2/channels/: payment_channel.cpp  payment_channel.h
layer2/dex/: dex.cpp  dex.h
layer2/htlc/: htlc.cpp  htlc.h
layer2/payment_channels/: payment_channel.cpp  payment_channel.h
layer2/plasma/: plasma_chain.cpp  plasma_chain.h
layer2/rollups/: optimistic_rollup.cpp  optimistic_rollup.h  zk_rollup.cpp  zk_rollup.h
layer2/spv/: spv_bridge.cpp  spv_bridge.h
relayers/: CMakeLists.txt  README.md  pantheon-relayer-l2.cpp  pantheon-relayer-l3.cpp
relayers/relayer-l2/: main.cpp
relayers/relayer-l3/: main.cpp
src/: CMakeLists.txt
src/common/: bridging.cpp  bridging.h  commitments.cpp  commitments.h  cryptography.cpp  mempool.h  metrics.cpp  metrics.h  p2p_network.cpp  p2p_network.h  serialization.cpp  serialization.h  storage.h
src/drachma/: payments_state_machine.cpp  pos_consensus.cpp  pos_consensus.h
src/obolos/: pos_consensus.cpp
src/relayers/: README.md
src/talanton/: l1_commitment_validator.h
src/tools/: CMakeLists.txt  README.md  pantheon_cli.cpp  pantheon_node.cpp
tests/: CMakeLists.txt  CMakeLists_addition.txt  README.md
tests/adversarial/: CMakeLists.txt  bridge_test_helpers.h  test_adversarial_bridge.cpp  test_adversarial_consensus.cpp  test_chain_id_separation.cpp  test_chaos_composite.cpp  test_supply_invariants.cpp
tests/chaos/: chaos_engineering.cpp  chaos_engineering.h
tests/consensus/: test_consensus.cpp
tests/fuzzing/: CMakeLists.txt  test_dex_fuzzing.cpp  test_layers_fuzzing.cpp
tests/integration/: adversarial-multinode.sh  devnet-smoke.sh  devnet_smoke_rpc.cpp  devnet_smoke_test  test_integration.cpp  test_integration_automated.cpp  test_mobile_sdk_regtest.cpp  testnet-smoke.sh
tests/unit/: CMakeLists.txt
tools/: CMakeLists.txt
tools/block_explorer/: explorer.cpp  explorer.h
tools/chain_params/: chain_params.cpp
tools/debugging/: tracer.cpp  tracer.h
tools/genesis_builder/: genesis_builder.cpp
tools/ide_plugins/: README.md  language_server.cpp  language_server.h
tools/ipfs/: ipfs_client.cpp  ipfs_client.h
tools/key_tools/: key_tools.cpp
tools/ml_verification/: ml_verify.cpp  ml_verify.h
tools/mobile_sdks/: README.md  mobile_sdk.cpp  mobile_sdk.h
tools/testing/: framework.cpp  framework.h  verify_advanced_features.sh
(+554 files in other folders)
